--- a/biodiversity/index.html
+++ b/biodiversity/index.html
@@ -7,7 +7,7 @@
     <title>Biodiversity loss</title>
     <link rel="stylesheet" href="styles.css"/>
     <!--set custom browser icon-->
-    <link rel="icon" href="/assets/microbes.svg"/>
+    <link rel="icon" href="/assets/microbes.svg?sanitize=true"/>
     <!--display this in link preview-->
     <meta name="description" content="Earth biodervisity mainly depends on the state of the forests. Tropical forests contain about 90% of the world's species. We are currently experiencing the sixth mass extinction: The Holocene extinction."/>
     <!--Import fonts-->
