--- a/biodiversity/index.html
+++ b/biodiversity/index.html
@@ -36,7 +36,7 @@
             <div>
                 <figure id="img-div">
                     <a href="https://www.rainforest-alliance.org/" id="tribute-link" target="_blank" rel="noopener">
-                    <img id="image" src="/assets/rainforest_alliance.svg" alt="logo of the Rainforest Alliance">
+                    <img id="image" src="/assets/rainforest_alliance.svg?sanitize=true" alt="logo of the Rainforest Alliance">
                     <figcaption id="img-caption">Visit Rainforest Alliance  website and learn more about what can you do for the planet</figcaption></a>
                 </figure>
             </div>
@@ -48,7 +48,7 @@
         -->
     </main>
     <footer>
-        <p>Made by <a rel="noopener" href="https://github.com/WitchDevelops" target="_blank">WitchDevelops <img id="github_logo" src="/assets/github.svg" alt="GitHub logo that is a link to my GitHub account"/></a> Dominika Wojewska </p>
+        <p>Made by <a rel="noopener" href="https://github.com/WitchDevelops" target="_blank">WitchDevelops <img id="github_logo" src="/assets/github.svg?sanitize=true" alt="GitHub logo that is a link to my GitHub account"/></a> Dominika Wojewska </p>
         
     </footer>
 </body>
