--- a/biodiversity/index.html
+++ b/biodiversity/index.html
@@ -48,7 +48,7 @@
         -->
     </main>
     <footer>
-        <p>Made by <a rel="noopener" href="https://github.com/WitchDevelops" target="_blank">WitchDevelops <img id="github_logo" src="/biodiversity/assets/github.png" alt="GitHub logo that is a link to my GitHub account"/></a> Dominika Wojewska </p>
+        <p>DEsigned and coded by <a rel="noopener" href="https://github.com/WitchDevelops" target="_blank">WitchDevelops <img id="github_logo" src="/biodiversity/assets/github.png" alt="GitHub logo that is a link to my GitHub account"/></a> Dominika Wojewska </p>
         
     </footer>
 </body>
