--- a/technical_documentation/index.html
+++ b/technical_documentation/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--icon from freepik https://www.flaticon.com/free-icons/internet-->
-    <link rel="icon" href="/biodiversity/assets/microbes.png"/>
+    <link rel="icon" href="/technical_documentation/icon.png"/>
     <meta name="description" content="How to build a responsive website? Read this technical documentation page."/>
     <title>Responsive Web Design - Technical Documentation</title>
     <link rel="stylesheet" href="styles.css">
@@ -45,7 +45,7 @@
     <hr>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Content-is-like-water.svg/1280px-Content-is-like-water.svg.png" alt="Contents is like water. Image shows a cup, a teapot, a bottle, a mobile device, and a desktop, all filled with a fluid content. Quote below says: You put water into a cup, it becomes the cup. You put water into a bottle, it becomes the bottle. You put it in a teapot, it becomes the teapot. Josh Clark (originally Bruce Lee) - Seven deadly mobile myths. Illustration by Stephanie Walter."/>
     <hr>
-    <p>Source: <a href="https://en.wikipedia.org/wiki/Responsive_web_design">Wikipedia.</a></p>
+    <p>Source: <a href="https://en.wikipedia.org/wiki/Responsive_web_design" target="_blank" rel="non-referer">Wikipedia.</a></p>
       </section>
 
       <section class="main-section" id="setting_the_viewport">
@@ -166,7 +166,7 @@
 
         </table>
 
-        <p>Source: <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Sizing_items_in_CSS">MDN web docs</a></p>
+        <p>Source: <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Sizing_items_in_CSS" target="_blank" rel="non-referer">MDN web docs</a></p>
       </section>
 
       <section class="main-section" id="responsive_images">
@@ -247,7 +247,9 @@
         </table>
         <p>Despite this information, <strong>there is no standard screen size for web design</strong>.</p>
         <p>Depending on the nature of the website, users might use certain devices that do not offer the screen sizes and resolutions mentioned above. To identify the right screen sizes for web design, invest in analytics. Find out what your target audience is most likely to use. If those devices don’t adhere to the aforementioned resolution, then include them in the mix.</p>
+        <br>
         <p>Source: <a href="https://learn.microsoft.com/en-us/windows/apps/design/layout/screen-sizes-and-breakpoints-for-responsive-design" target="_blank" rel="no-referer">Microsoft’s documentation</a></p>
+        <br>
         <p>To be even more specific, some common widths of devices are as follows:</p>
         <table>
             <tr>
