--- a/technical_documentation/index.html
+++ b/technical_documentation/index.html
@@ -9,6 +9,11 @@
     <meta name="description" content="How to build a responsive website? Read this technical documentation page."/>
     <title>Responsive Web Design - Technical Documentation</title>
     <link rel="stylesheet" href="styles.css">
+    <!--Import fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <script src="converter.js"></script>
 </head>
 
@@ -335,7 +340,7 @@
           <li>3 modern CSS techniques for responsive design <a href="https://www.youtube.com/watch?v=VsNAuGkCpQU" target="_blank" rel="no-referer">YouTube 15 min video</a></li>
       </section>
     <footer class="full-width">
-        <p>Designed and coded by <a rel="noopener" href="https://github.com/WitchDevelops" target="_blank"> Dominika Wojewska</p>
+           <p>Written, designed and coded by <a rel="noopener" href="https://github.com/WitchDevelops" target="_blank">WitchDevelops <img src="github.png"> Dominika Wojewska</a></p>
     </footer>
     </main>
 </body>
