--- a/technical_documentation/index.html
+++ b/technical_documentation/index.html
@@ -340,7 +340,7 @@
           <li>3 modern CSS techniques for responsive design <a href="https://www.youtube.com/watch?v=VsNAuGkCpQU" target="_blank" rel="no-referer">YouTube 15 min video</a></li>
       </section>
     <footer class="full-width">
-           <p>Written, designed and coded by <a rel="noopener" href="https://github.com/WitchDevelops" target="_blank">WitchDevelops <img src="github.png"> Dominika Wojewska</a></p>
+        <p><span>Written, designed and coded by </span><a rel="noopener" href="https://github.com/WitchDevelops" target="_blank">WitchDevelops <img src="github.png"> Dominika Wojewska</a></p>
     </footer>
     </main>
 </body>
