--- a/technical_documentation/index.html
+++ b/technical_documentation/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="How to build a responsive website? Read this technical documentation page."/>
     <title>Responsive Web Design - Technical Documentation</title>
     <link rel="stylesheet" href="styles.css">
+    <!--bootstrap-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <!--Import fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,19 +20,38 @@
 </head>
 
 <body>
-    <nav id="navbar">
-      <header>
-        Jump to: 
-      </header>
-      <button><a class="nav-link" href="#responsive_web_design_definition">Definition</a></button>
-      <button><a class="nav-link" href="#setting_the_viewport">Viewport set</a></button>
-      <button><a class="nav-link" href="#relative_length_units">Relative length units</a></button>
-      <button><a class="nav-link" href="#responsive_images">Responsive images</a></button>
-      <button><a class="nav-link" href="#responsive_text_size">Responsive text size</a></button>
-      <button><a class="nav-link" href="#media_queries">Media queries</a></button>
-      <button><a class="nav-link" href="#PX_to_em_converter">Converter: px to em</a></button>
-      <button><a class="nav-link" href="#learn_responsive_web_design">Learn responsive Web Design</a></button>
+  <header>
+    Jump to: 
+  </header>
+  <!--bootstrap elements for the menu-->
+  <section class="mb-3"> 
+  <nav class="navbar navbar-light bg-light" id="navbar">
+      
+      <div class="container-fluid">
+        <!--menu button -->
+        <button class="navbar-toggler first-button" type="button" data-mdb-toggle="collapse"
+          data-mdb-target="#navbarToggleExternalContent9"
+          aria-controls="navbarToggleExternalContent9" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <div class="burger_menu"><span></span><span></span><span></span></div>
+        </button>
+      </div>
     </nav>
+    <!--menu items-->
+    <div class="collapse" id="navbarToggleExternalContent9">
+      <div class="bg-light shadow-3 p-4">
+        <button class="btn btn-link btn-block border-bottom m-0"><a class="nav-link" href="#responsive_web_design_definition">Definition</a></button>
+        <button class="btn btn-link btn-block border-bottom m-0"><a class="nav-link" href="#setting_the_viewport">Viewport set</a></button>
+        <button class="btn btn-link btn-block border-bottom m-0"><a class="nav-link" href="#relative_length_units">Relative length units</a></button>
+        <button class="btn btn-link btn-block border-bottom m-0"><a class="nav-link" href="#responsive_images">Responsive images</a></button>
+        <button class="btn btn-link btn-block border-bottom m-0"><a class="nav-link" href="#responsive_text_size">Responsive text size</a></button>
+        <button class="btn btn-link btn-block border-bottom m-0"><a class="nav-link" href="#media_queries">Media queries</a></button>
+        <button class="btn btn-link btn-block border-bottom m-0"><a class="nav-link" href="#PX_to_em_converter">Converter: px to em</a></button>
+        <button class="btn btn-link btn-block m-0"><a class="nav-link" href="#learn_responsive_web_design">Learn responsive Web Design</a></button>
+      </div>
+    </div>
+  </section>
+  <!--end menu--> 
 
     <main id="main-doc">
 
@@ -343,5 +364,9 @@
         <p><span>Written, designed and coded by </span><a rel="noopener" href="https://github.com/WitchDevelops" target="_blank">WitchDevelops <img src="github.png"> Dominika Wojewska</a></p>
     </footer>
     </main>
+    <!--load bootstrap and jQuery-->
+    <script src="script.js"></script>
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
 </html>
