--- a/technical_documentation/index.html
+++ b/technical_documentation/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--icon from freepik https://www.flaticon.com/free-icons/internet-->
-    <link rel="icon" href="/technical_documentation/icon.png"/>
+    <link rel="icon" href="icon.png"/>
     <meta name="description" content="How to build a responsive website? Read this technical documentation page."/>
     <title>Responsive Web Design - Technical Documentation</title>
     <link rel="stylesheet" href="styles.css">
