--- a/biodiversity/index.html
+++ b/biodiversity/index.html
@@ -9,7 +9,7 @@
     <!--set custom browser icon-->
     <link rel="icon" href="/biodiversity/assets/microbes.png"/>
     <!--display this in link preview-->
-    <meta name="description" content="Earth biodervisity mainly depends on the state of the forests. Tropical forests contain about 90% of the world's species. We are currently experiencing the sixth mass extinction: The Holocene extinction."/>
+    <meta name="description" content="Earth biodiversity mainly depends on the state of the forests. Tropical forests contain about 90% of the world's species. We are currently experiencing the sixth mass extinction: The Holocene extinction."/>
     <!--Import fonts-->
     <link href='https://fonts.googleapis.com/css?family=PT Serif Caption' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -48,7 +48,7 @@
         -->
     </main>
     <footer>
-        <p>Designed and coded by <a rel="noopener" href="https://github.com/WitchDevelops" target="_blank">WitchDevelops <img id="github_logo" src="/biodiversity/assets/github.png" alt="GitHub logo that is a link to my GitHub account"/></a> Dominika Wojewska </p>
+        <p>Designed and coded by &copy <a rel="noopener" href="https://github.com/WitchDevelops" target="_blank">WitchDevelops <img id="github_logo" src="/biodiversity/assets/github.png" alt="GitHub logo that is a link to my GitHub account"/></a> Dominika Wojewska </p>
     </footer>
 </body>
 </html>
