Add noopener and aria labels to HTML

--- a/technical_documentation/index.html
+++ b/technical_documentation/index.html
@@ -29,15 +29,15 @@
       <span></span>
       <span></span>
       <!--menu items-->
-      <ul id="menu">
-        <a class="nav-link" href="#responsive_web_design_definition"><li>Definition</a></li>
-        <a class="nav-link" href="#setting_the_viewport"><li>Viewport set</a></li>
-        <a class="nav-link" href="#relative_length_units"><li>Relative length units</a></li>
-        <a class="nav-link" href="#responsive_images"><li>Responsive images</a></li>
-        <a class="nav-link" href="#responsive_text_size"><li>Responsive text size</a></li>
-        <a class="nav-link" href="#media_queries"><li>Media queries</a></li>
-        <a class="nav-link" href="#PX_to_em_converter"><li>Converter: px to em</a></li>
-        <a class="nav-link" href="#learn_responsive_web_design"><li>Learn responsive Web Design</a>
+      <ul id="menu" aria-label="Menu">
+        <a class="nav-link" href="#responsive_web_design_definition" aria-label="Definition of responsive web design"><li>Definition</a></li>
+        <a class="nav-link" href="#setting_the_viewport" aria-label="Setting the viewport"><li>Viewport set</a></li>
+        <a class="nav-link" href="#relative_length_units" aria-label="Relative length units"><li>Relative length units</a></li>
+        <a class="nav-link" href="#responsive_images" aria-label="Responsive images"><li>Responsive images</a></li>
+        <a class="nav-link" href="#responsive_text_size" aria-label="Responsive text size"><li>Responsive text size</a></li>
+        <a class="nav-link" href="#media_queries" aria-label="Media queries"><li>Media queries</a></li>
+        <a class="nav-link" href="#PX_to_em_converter" aria-label="px to em converter"><li>Converter: px to em</a></li>
+        <a class="nav-link" href="#learn_responsive_web_design" aria-label="Learn responsive web design"><li>Learn responsive Web Design</a>
       </ul>
     </div>
   </nav> 
@@ -60,7 +60,7 @@
     <hr>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Content-is-like-water.svg/1280px-Content-is-like-water.svg.png" alt="Contents is like water. Image shows a cup, a teapot, a bottle, a mobile device, and a desktop, all filled with a fluid content. Quote below says: You put water into a cup, it becomes the cup. You put water into a bottle, it becomes the bottle. You put it in a teapot, it becomes the teapot. Josh Clark (originally Bruce Lee) - Seven deadly mobile myths. Illustration by Stephanie Walter."/>
     <hr>
-    <p>Source: <a href="https://en.wikipedia.org/wiki/Responsive_web_design" target="_blank" rel="non-referer">Wikipedia.</a></p>
+    <p>Source: <a href="https://en.wikipedia.org/wiki/Responsive_web_design" target="_blank" rel="non-referer noopener">Wikipedia.</a></p>
       </section>
 
       <section class="main-section" id="setting_the_viewport">
@@ -181,7 +181,7 @@
 
         </table>
 
-        <p>Source: <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Sizing_items_in_CSS" target="_blank" rel="non-referer">MDN web docs</a></p>
+        <p>Source: <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Sizing_items_in_CSS" target="_blank" rel="non-referer noopener">MDN web docs</a></p>
       </section>
 
       <section class="main-section" id="responsive_images">
@@ -212,7 +212,7 @@
             <code class="indent">height: auto;</code></br>
             <code class="indent">}</code>
         </div>
-        <p>Source: <a href="https://www.w3schools.com/howto/howto_css_image_responsive.asp" target="_blank" rel="no-referer">w3schools</a></p>
+        <p>Source: <a href="https://www.w3schools.com/howto/howto_css_image_responsive.asp" target="_blank" rel="no-referer noopener">w3schools</a></p>
       </section>
 
       <section class="main-section" id="responsive_text_size">
@@ -263,7 +263,7 @@
         <p>Despite this information, <strong>there is no standard screen size for web design</strong>.</p>
         <p>Depending on the nature of the website, users might use certain devices that do not offer the screen sizes and resolutions mentioned above. To identify the right screen sizes for web design, invest in analytics. Find out what your target audience is most likely to use. If those devices don’t adhere to the aforementioned resolution, then include them in the mix.</p>
         <br>
-        <p>Source: <a href="https://learn.microsoft.com/en-us/windows/apps/design/layout/screen-sizes-and-breakpoints-for-responsive-design" target="_blank" rel="no-referer">Microsoft’s documentation</a></p>
+        <p>Source: <a href="https://learn.microsoft.com/en-us/windows/apps/design/layout/screen-sizes-and-breakpoints-for-responsive-design" target="_blank" rel="no-referer noopener">Microsoft’s documentation</a></p>
         <br>
         <p>To be even more specific, some common widths of devices are as follows:</p>
         <table>
@@ -292,12 +292,12 @@
                 <td>1201px and more</td>
             </tr>
         </table>
-        <p>Source: <a href="https://www.freecodecamp.org/news/css-media-queries-breakpoints-media-types-standard-resolutions-and-more/" target="_blank" rel="no-referer">FreeCodeCamp</a></p>
+        <p>Source: <a href="https://www.freecodecamp.org/news/css-media-queries-breakpoints-media-types-standard-resolutions-and-more/" target="_blank" rel="no-referer noopener">FreeCodeCamp</a></p>
       </section>
 
       <section class="main-section" id="PX_to_em_converter">
         <header>px to em converter</header>
-        <p>W3schools provides a converter from px units to em units. It can be found <a href="https://www.w3schools.com/cssref/css_pxtoemconversion.asp" target="_blank" rel="no-referer">here.</a></p>
+        <p>W3schools provides a converter from px units to em units. It can be found <a href="https://www.w3schools.com/cssref/css_pxtoemconversion.asp" target="_blank" rel="no-referer noopener">here.</a></p>
 
         <!--Copied code, but reworked: removed unnecessary classes and inline styles, changed function name as I think naming anything myFunction is uninformative-->
         <div class="converter">
@@ -336,7 +336,7 @@
 
             <p>Result: <span id="result1">0 px</span></p>
             </div>
-            <p>Source: <a href="https://www.w3schools.com/cssref/css_pxtoemconversion.asp" target="_blank" rel="no-referer">W3schools</a></p>
+            <p>Source: <a href="https://www.w3schools.com/cssref/css_pxtoemconversion.asp" target="_blank" rel="no-referer noopener">W3schools</a></p>
         <!--end-->
 
       </section>
@@ -346,11 +346,11 @@
         <p>Learn responsive Web Design from the king of CSS, Kevin Powell. Links to learning resources:</p>
         <ul>
           <li>Bootcamp provided by <a href="https://scrimba.com/learn/responsive" target="_blank" rel="no-referer">Scrimba</a></li>
-          <li>4-hour crash course on <a href="https://www.youtube.com/watch?v=srvUrASNj0s" target="_blank" rel="no-referer">YouTube</a></li>
-          <li>3 modern CSS techniques for responsive design <a href="https://www.youtube.com/watch?v=VsNAuGkCpQU" target="_blank" rel="no-referer">YouTube 15 min video</a></li>
+          <li>4-hour crash course on <a href="https://www.youtube.com/watch?v=srvUrASNj0s" target="_blank" rel="no-referer noopener">YouTube</a></li>
+          <li>3 modern CSS techniques for responsive design <a href="https://www.youtube.com/watch?v=VsNAuGkCpQU" target="_blank" rel="no-referer noopener">YouTube 15 min video</a></li>
       </section>
     <footer>
-        <p><span>Written, designed and coded by </span><a rel="noopener" href="https://github.com/WitchDevelops" target="_blank">WitchDevelops <img src="github.png"> Dominika Wojewska</a></p>
+        <p><span>Written, designed and coded by </span><a rel="noopener" href="https://github.com/WitchDevelops" target="_blank">WitchDevelops <img src="github.png" alt="GitHub icon that is a link to my GitHub account"> Dominika Wojewska</a></p>
     </footer>
     </main>
 </body>
