Made menu 100% width height on mobile

--- a/technical_documentation/index.html
+++ b/technical_documentation/index.html
@@ -23,7 +23,7 @@
   <nav role="navigation" id="navbar">
     <div id="menuToggle">
       <!--A fake / hidden checkbox is used as click receiver, so you can use the :checked selector on it. -->
-      <input type="checkbox" />
+      <input type="checkbox" role="navigation"/>
       <!--spans to create the burger icon-->
       <span></span>
       <span></span>
