--- a/technical_documentation/index.html
+++ b/technical_documentation/index.html
@@ -346,7 +346,7 @@
         <header>Learn responsive Web Design</header>
         <p>Learn responsive Web Design from the king of CSS, Kevin Powell. Links to learning resources:</p>
         <ul>
-          <li>Bootcamp provided by <a href="https://scrimba.com/learn/responsive" target="_blank" rel="no-referer">Scrimba</a></li>
+          <li>Bootcamp provided by <a href="https://scrimba.com/learn/responsive" target="_blank" rel="no-referer noopener">Scrimba</a></li>
           <li>4-hour crash course on <a href="https://www.youtube.com/watch?v=srvUrASNj0s" target="_blank" rel="no-referer noopener">YouTube</a></li>
           <li>3 modern CSS techniques for responsive design <a href="https://www.youtube.com/watch?v=VsNAuGkCpQU" target="_blank" rel="no-referer noopener">YouTube 15 min video</a></li>
       </section>
